<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:fitsSystemWindows="true">

    <include layout="@layout/layout_toolbar" />

    <LinearLayout
        android:id="@+id/about_ll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/about_logo"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/ic_launcher_100dp" />

        <com.zzw.MyApp.wedgit.matchView.MatchTextView
            android:id="@+id/about_text1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:text="@string/app_name"
            app:textColor="@android:color/white"
            app:textSize="20sp" />


        <com.zzw.MyApp.wedgit.matchView.MatchButton
            android:id="@+id/about_text2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:text="@string/blog_name"
            app:textColor="@android:color/white"
            app:textSize="14sp" />


        <com.zzw.MyApp.wedgit.matchView.MatchButton
            android:id="@+id/about_text3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:text="@string/github_name"
            app:textColor="@android:color/white"
            app:textSize="12sp" />

    </LinearLayout>


</android.support.design.widget.CoordinatorLayout>