<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp">

            <EditText
                android:id="@+id/long_bus_from_city_edit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:hint="@string/cheng_du" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/ic_right_" />


            <EditText
                android:id="@+id/long_bus_to_city_edit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:hint="@string/hui_dong"
                android:singleLine="true" />

            <TextView
                android:id="@+id/long_bus_query_bt"
                android:layout_width="50dp"
                android:layout_height="35dp"
                android:layout_gravity="center"
                android:background="@drawable/long_bus_query_bt_bg"
                android:gravity="center"
                android:text="@string/query" />

        </LinearLayout>

        <TextView
            android:id="@+id/long_bus_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="5dp" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/long_bus_recy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="vertical" />


    </LinearLayout>


</LinearLayout>